add axios, redux-promise; still need to add router

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.14.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-router": "^2.8.1",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
