--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server",
     "prod": "webpack -p",
-    "gh": "webpack && gh-pages -d dist"
+    "gh": "webpack && gh-pages -d dist",
+    "tester" : "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test" : "npm run tester -- --watch"
   },
   "author": "mfunk@mafunk.info",
   "repository": {
@@ -27,10 +29,16 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "css-loader": "^0.25.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
+    "jquery": "^3.1.1",
+    "jsdom": "^9.5.0",
     "lodash": "^4.16.0",
+    "mocha": "^3.1.0",
+    "react-addons-test-utils": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
