--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gh": "webpack && gh-pages -d dist",
     "tester" : "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test" : "npm run tester -- --watch",
-    "dev" : "npm run start & npm run test"
+    "dev" : "npm run start && npm run test"
   },
   "author": "mfunk@mafunk.info",
   "repository": {
