just one command now

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "webpack-dev-server",
     "prod": "webpack -p",
     "gh": "webpack && gh-pages -d dist",
-    "tester" : "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test" : "npm run tester -- --watch",
-    "dev" : "npm run start && npm run test"
+    "test" : "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test --watch"
   },
   "author": "mfunk@mafunk.info",
   "repository": {
